# Advanced-Programming-1-ex2

./: README.md
Client_Side/: CMakeLists.txt  Communication.cpp  Communication.h  main.cpp
Server Side/: CMakeLists.txt  ChebyshevMetric.cpp  Communication.cpp  Communication.h  EuclideanMetric.cpp  FileHandler.cpp  FileHandler.h  README.md  main.cpp
